# JHMR-v2

./: CMakeLists.txt  README.md  example_build_script
apps/: CMakeLists.txt
lib/: CMakeLists.txt
lib/basic_math/: CMakeLists.txt  jhmrBasicStats.cpp  jhmrBasicStats.h  jhmrDistInterface.cpp  jhmrDistInterface.h  jhmrFoldNormDist.cpp  jhmrFoldNormDist.h  jhmrLinAlgUtils.cpp  jhmrLinAlgUtils.h  jhmrLogNormDist.cpp  jhmrLogNormDist.h  jhmrNDRange.cpp  jhmrNDRange.h  jhmrNormDist.cpp  jhmrNormDist.h  jhmrNormDistFit.cpp  jhmrNormDistFit.h  jhmrNullDist.cpp  jhmrNullDist.h  jhmrPolyFindZeros.cpp  jhmrPolyFindZeros.h  jhmrPolyFit.cpp  jhmrPolyFit.h  jhmrSampleUniformUnitVecs.cpp  jhmrSampleUniformUnitVecs.h
lib/common/: CMakeLists.txt  jhmrAssert.cpp  jhmrAssert.h  jhmrCommon.h  jhmrCompareUtils.h  jhmrEndianUtils.cpp  jhmrEndianUtils.h  jhmrExceptionUtils.cpp  jhmrExceptionUtils.h  jhmrFilesystemUtils.cpp  jhmrFilesystemUtils.h  jhmrLandmarkMapUtils.cpp  jhmrLandmarkMapUtils.h  jhmrMesh.cpp  jhmrMesh.h  jhmrObjWithOStream.cpp  jhmrObjWithOStream.h  jhmrObjectUtils.h  jhmrProgOptUtils.cpp  jhmrProgOptUtils.h  jhmrSampleUtils.cpp  jhmrSampleUtils.h  jhmrSizedTypeUtils.h  jhmrStdStreamUtils.cpp  jhmrStdStreamUtils.h  jhmrStreams.cpp  jhmrStreams.h  jhmrStringUtils.cpp  jhmrStringUtils.h  jhmrTBBUtils.h  jhmrTimer.cpp  jhmrTimer.h  jhmrTypeUtils.h
lib/file_formats/: CMakeLists.txt  jhmrACSVUtils.cpp  jhmrACSVUtils.h  jhmrCIOSFusionDICOM.cpp  jhmrCIOSFusionDICOM.h  jhmrCSVUtils.cpp  jhmrCSVUtils.h  jhmrDICOMUtils.cpp  jhmrDICOMUtils.h  jhmrFCSVUtils.cpp  jhmrFCSVUtils.h  jhmrH5CamModelIO.cpp  jhmrH5CamModelIO.h  jhmrH5MeshIO.cpp  jhmrH5MeshIO.h  jhmrH5PAOIO.cpp  jhmrH5PAOIO.h  jhmrH5ProjDataIO.cpp  jhmrH5ProjDataIO.h  jhmrH5SE3OptVarsIO.cpp  jhmrH5SE3OptVarsIO.h  jhmrMeshIO.cpp  jhmrMeshIO.h  jhmrPAOIO.cpp  jhmrPAOIO.h  jhmrSTLMeshIO.cpp  jhmrSTLMeshIO.h  jhmrWriteVideo.cpp  jhmrWriteVideo.h  xregH5ProjDataIO.cpp
lib/hdf5/: CMakeLists.txt  jhmrHDF5.cpp  jhmrHDF5.h  jhmrHDF5ReadWriteInterface.h
lib/hdf5/internal/: jhmrHDF5Internal.h
lib/hip_surgery/: CMakeLists.txt  jhmrHipSegUtils.cpp  jhmrHipSegUtils.h  jhmrMetalObjSampling.cpp  jhmrMetalObjSampling.h  jhmrMetalObjs.cpp  jhmrMetalObjs.h  jhmrPAOCuts.cpp  jhmrPAOCuts.h  jhmrPAODrawBones.cpp  jhmrPAODrawBones.h  jhmrPAOVolAfterRepo.cpp  jhmrPAOVolAfterRepo.h  jhmrSegMetalInXRay.cpp  jhmrSegMetalInXRay.h  xregPAODrawBones.cpp  xregPAODrawBones.h
lib/image/: CMakeLists.txt  jhmrHUToLinAtt.cpp  jhmrHUToLinAtt.h  jhmrImageAddPoissonNoise.cpp  jhmrImageAddPoissonNoise.h  jhmrImageIntensLogTrans.cpp  jhmrImageIntensLogTrans.h  jhmrLabelWarping.cpp  jhmrLabelWarping.h  jhmrProjData.cpp  jhmrProjData.h  jhmrProjPreProc.cpp  jhmrProjPreProc.h  jhmrVariableSpacedSlices.cpp  jhmrVariableSpacedSlices.h
lib/itk/: CMakeLists.txt  jhmrITKBackgroundImageWriter.h  jhmrITKBasicImageUtils.cpp  jhmrITKBasicImageUtils.h  jhmrITKCropPadUtils.cpp  jhmrITKCropPadUtils.h  jhmrITKIOUtils.cpp  jhmrITKIOUtils.h  jhmrITKLabelUtils.cpp  jhmrITKLabelUtils.h  jhmrITKMathOps.h  jhmrITKOpenCVUtils.h  jhmrITKRemapUtils.cpp  jhmrITKRemapUtils.h  jhmrITKResampleUtils.h  xregITKLabelUtils.cpp  xregITKLabelUtils.h
lib/opencl/: CMakeLists.txt  jhmrOpenCLConvert.cpp  jhmrOpenCLConvert.h  jhmrOpenCLMath.cpp  jhmrOpenCLMath.h  jhmrOpenCLMiscKernels.cpp  jhmrOpenCLMiscKernels.h  jhmrOpenCLSpatial.cpp  jhmrOpenCLSpatial.h  jhmrOpenCLSys.cpp  jhmrOpenCLSys.h  jhmrViennaCLManager.cpp  jhmrViennaCLManager.h
lib/opencv/: CMakeLists.txt  jhmrOpenCVUtils.cpp  jhmrOpenCVUtils.h  xregOpenCVUtils.cpp  xregOpenCVUtils.h
lib/optim/: CMakeLists.txt  jhmrCMAESInterface.cpp  jhmrCMAESInterface.h  jhmrDiffEvo.cpp  jhmrDiffEvo.h  jhmrLineSearchOpt.cpp  jhmrLineSearchOpt.h  jhmrOptimTestObjFns.cpp  jhmrOptimTestObjFns.h  jhmrPSO.cpp  jhmrPSO.h  jhmrSimAnn.cpp  jhmrSimAnn.h
lib/ray_cast/: CMakeLists.txt  jhmrEdgesFromRayCast.cpp  jhmrEdgesFromRayCast.h  jhmrRayCastBaseCPU.cpp  jhmrRayCastBaseCPU.h  jhmrRayCastBaseOCL.cpp  jhmrRayCastBaseOCL.h  jhmrRayCastDepthCPU.cpp  jhmrRayCastDepthCPU.h  jhmrRayCastDepthOCL.cpp  jhmrRayCastDepthOCL.h  jhmrRayCastInterface.cpp  jhmrRayCastInterface.h  jhmrRayCastLineIntCPU.cpp  jhmrRayCastLineIntCPU.h  jhmrRayCastLineIntOCL.cpp  jhmrRayCastLineIntOCL.h  jhmrRayCastOccContourCPU.cpp  jhmrRayCastOccContourCPU.h  jhmrRayCastOccContourOCL.cpp  jhmrRayCastOccContourOCL.h  jhmrRayCastProgOpts.cpp  jhmrRayCastProgOpts.h  jhmrRayCastSparseCollCPU.cpp  jhmrRayCastSparseCollCPU.h  jhmrRayCastSurRenderCPU.cpp  jhmrRayCastSurRenderCPU.h  jhmrRayCastSurRenderOCL.cpp  jhmrRayCastSurRenderOCL.h  jhmrRayCastSyncBuf.cpp  jhmrRayCastSyncBuf.h  jhmrSplatLineIntCPU.cpp  jhmrSplatLineIntCPU.h
lib/regi/: CMakeLists.txt  jhmrICP3D3D.cpp  jhmrICP3D3D.h  jhmrPairedPointRegi3D3D.cpp  jhmrPairedPointRegi3D3D.h  jhmrSE3OptVars.cpp  jhmrSE3OptVars.h
lib/regi/interfaces_2d_3d/: jhmrIntensity2D3DRegi.cpp  jhmrIntensity2D3DRegi.h  jhmrIntensity2D3DRegiBOBYQA.cpp  jhmrIntensity2D3DRegiBOBYQA.h  jhmrIntensity2D3DRegiCMAES.cpp  jhmrIntensity2D3DRegiCMAES.h  jhmrIntensity2D3DRegiCRS.cpp  jhmrIntensity2D3DRegiCRS.h  jhmrIntensity2D3DRegiDESCH.cpp  jhmrIntensity2D3DRegiDESCH.h  jhmrIntensity2D3DRegiDIRECT.cpp  jhmrIntensity2D3DRegiDIRECT.h  jhmrIntensity2D3DRegiDISRES.cpp  jhmrIntensity2D3DRegiDISRES.h  jhmrIntensity2D3DRegiDebug.cpp  jhmrIntensity2D3DRegiDebug.h  (+22 more)
lib/spatial/: CMakeLists.txt  jhmrFitCircle.cpp  jhmrFitCircle.h  jhmrFitPlane.cpp  jhmrFitPlane.h  jhmrKDTree.cpp  jhmrKDTree.h  jhmrSpatialPrimitives.cpp  jhmrSpatialPrimitives.h
lib/transforms/: CMakeLists.txt  jhmrAnatCoordFrames.cpp  jhmrAnatCoordFrames.h  jhmrPerspectiveXform.cpp  jhmrPerspectiveXform.h  jhmrPointCloudUtils.cpp  jhmrPointCloudUtils.h  jhmrRigidUtils.cpp  jhmrRigidUtils.h  jhmrRotUtils.cpp  jhmrRotUtils.h
lib/version/: CMakeLists.txt  jhmrVersionConfigVals.cpp.in  jhmrVersionInfo.cpp  jhmrVersionInfo.h
lib/vtk/: CMakeLists.txt  jhmrVTK3DPlotter.cpp  jhmrVTK3DPlotter.h  jhmrVTKBasicUtils.cpp  jhmrVTKBasicUtils.h  jhmrVTKITKUtils.cpp  jhmrVTKITKUtils.h  jhmrVTKMeshUtils.cpp  jhmrVTKMeshUtils.h
(+153 files in other folders)
